Removed default params, added NPM packaging.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Blockly Demo: Fixed Blockly</title>
-  <script src="../blockly/blockly_uncompressed.js"></script>
-  <script src="../blockly/blocks/variables.js"></script>
-  <script src="../blockly/blocks/math.js"></script>
-  <script src="../blockly/blocks/logic.js"></script>
-  <script src="../blockly/msg/js/en.js"></script>
-
-  <script src="./blocks/contract.js"></script>
-  <script src="./generators/solidity.js"></script>
-  <script src="./generators/solidity/contract.js"></script>
-  <script src="./generators/solidity/methods.js"></script>
-  <script src="./generators/solidity/logic.js"></script>
-  <script src="./generators/solidity/math.js"></script>
+  <script src="https://unpkg.com/blockly/blockly.min.js"></script>
+  <script src="https://unpkg.com/blockly/blockly-blocks.min.js"></script>
+  <script src="./dist/solidity.js"></script>
+  <script src="./dist/blocks.js"></script>
   <style>
     body {
       background-color: #fff;
